# lexetta-lcp

./: .gitignore  README.md  pyproject.toml
src/lexetta_lcp/: eval_per_annotator.py  eval_permutation_test.py  train_complex.py  train_per_annotator.py  tune_per_annotator.py
src/lexetta_lcp/CompLex/: __init__.py  data.py  model.py  schema.py  train.py
src/lexetta_lcp/CompLexPerAnnotator/: __init__.py  data.py  model.py  retriever.py  schema.py  train.py
src/lexetta_lcp/utils/: draw.py
src/scripts/: eval_per_annotator.py  push_per_annotator.py
training/: eval_per_annotator.py  eval_permutation_test.py  requirements.txt  train_per_annotator.py  tune_per_annotator.py
training/CompLexPerAnnotator/: __init__.py  data.py  model.py  train.py
